--- a/_modules/jaxprop/two_component/mixture_calculations.html
+++ b/_modules/jaxprop/two_component/mixture_calculations.html
@@ -323,11 +323,6 @@ document.write(`
     <span class="n">smass</span> <span class="o">=</span> <span class="n">y_1</span> <span class="o">*</span> <span class="n">state_1</span><span class="o">.</span><span class="n">entropy</span> <span class="o">+</span> <span class="n">y_2</span> <span class="o">*</span> <span class="n">state_2</span><span class="o">.</span><span class="n">entropy</span>
 
     <span class="c1"># --- Joule-Thomson coefficients</span>
-    <span class="c1"># k_P_1 = state_1.isobaric_expansion_coefficient</span>
-    <span class="c1"># k_P_2 = state_2.isobaric_expansion_coefficient</span>
-    <span class="c1"># dhdp_T_1 = (1 - state_1.temperature * k_P_1) / state_1.density</span>
-    <span class="c1"># dhdp_T_2 = (1 - state_2.temperature * k_P_2) / state_2.density</span>
-    <span class="c1"># dhdp_T = y_1 * dhdp_T_1 + y_2 * dhdp_T_2</span>
     <span class="n">isothermal_joule_thomson</span> <span class="o">=</span> <span class="n">y_1</span> <span class="o">*</span> <span class="n">state_1</span><span class="o">.</span><span class="n">isothermal_joule_thomson</span> <span class="o">+</span> <span class="n">y_2</span> <span class="o">*</span> <span class="n">state_2</span><span class="o">.</span><span class="n">isothermal_joule_thomson</span>
     <span class="n">joule_thomson</span> <span class="o">=</span> <span class="o">-</span> <span class="n">isothermal_joule_thomson</span> <span class="o">/</span> <span class="n">cp</span>
 
@@ -339,7 +334,6 @@ document.write(`
     <span class="n">vol_2</span> <span class="o">=</span> <span class="n">y_2</span> <span class="o">*</span> <span class="n">rho</span> <span class="o">/</span> <span class="n">state_2</span><span class="o">.</span><span class="n">density</span>
 
     <span class="c1"># --- simple quality identifiers</span>
-    <span class="c1"># (use same criterion you had)</span>
     <span class="n">vapor_quality</span> <span class="o">=</span> <span class="n">y_1</span> <span class="k">if</span> <span class="n">state_1</span><span class="o">.</span><span class="n">density</span> <span class="o">&lt;</span> <span class="n">state_2</span><span class="o">.</span><span class="n">density</span> <span class="k">else</span> <span class="n">y_2</span>
     <span class="n">void_fraction</span> <span class="o">=</span> <span class="n">vol_1</span> <span class="k">if</span> <span class="n">state_1</span><span class="o">.</span><span class="n">density</span> <span class="o">&lt;</span> <span class="n">state_2</span><span class="o">.</span><span class="n">density</span> <span class="k">else</span> <span class="n">vol_2</span>
 
@@ -358,8 +352,8 @@ document.write(`
     <span class="n">Gamma_2</span> <span class="o">=</span> <span class="n">state_2</span><span class="o">.</span><span class="n">gruneisen</span>
     <span class="n">cp_1</span> <span class="o">=</span> <span class="n">state_1</span><span class="o">.</span><span class="n">isobaric_heat_capacity</span>
     <span class="n">cp_2</span> <span class="o">=</span> <span class="n">state_2</span><span class="o">.</span><span class="n">isobaric_heat_capacity</span>
-    <span class="n">C_1</span> <span class="o">=</span> <span class="n">rho_1</span> <span class="o">*</span> <span class="n">vol_1</span> <span class="o">*</span> <span class="n">cp_1</span>
-    <span class="n">C_2</span> <span class="o">=</span> <span class="n">rho_2</span> <span class="o">*</span> <span class="n">vol_2</span> <span class="o">*</span> <span class="n">cp_2</span>
+    <span class="n">C_1</span> <span class="o">=</span> <span class="n">vol_1</span> <span class="o">*</span> <span class="n">rho_1</span> <span class="o">*</span> <span class="n">cp_1</span>
+    <span class="n">C_2</span> <span class="o">=</span> <span class="n">vol_2</span> <span class="o">*</span> <span class="n">rho_2</span> <span class="o">*</span> <span class="n">cp_2</span>
     <span class="n">inv_a2_p</span> <span class="o">=</span> <span class="n">rho</span> <span class="o">*</span> <span class="p">(</span>
         <span class="n">vol_1</span> <span class="o">/</span> <span class="p">(</span><span class="n">rho_1</span> <span class="o">*</span> <span class="n">a_1</span><span class="o">**</span><span class="mi">2</span><span class="p">)</span> <span class="o">+</span>
         <span class="n">vol_2</span> <span class="o">/</span> <span class="p">(</span><span class="n">rho_2</span> <span class="o">*</span> <span class="n">a_2</span><span class="o">**</span><span class="mi">2</span><span class="p">)</span>
@@ -370,10 +364,10 @@ document.write(`
         <span class="p">(</span><span class="n">Gamma_1</span><span class="o">/</span><span class="p">(</span><span class="n">rho_1</span> <span class="o">*</span> <span class="n">a_1</span><span class="o">**</span><span class="mi">2</span><span class="p">)</span> <span class="o">-</span> <span class="n">Gamma_2</span><span class="o">/</span><span class="p">(</span><span class="n">rho_2</span> <span class="o">*</span> <span class="n">a_2</span><span class="o">**</span><span class="mi">2</span><span class="p">))</span><span class="o">**</span><span class="mi">2</span>
     <span class="p">)</span>
     <span class="n">inv_a2_pT</span> <span class="o">=</span> <span class="n">inv_a2_p</span> <span class="o">+</span> <span class="n">Z_pT</span>
-    <span class="n">speed_sound_p</span> <span class="o">=</span> <span class="n">jnp</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="mf">1.0</span> <span class="o">/</span> <span class="n">inv_a2_p</span><span class="p">)</span>
-    <span class="n">speed_sound_pT</span> <span class="o">=</span> <span class="n">jnp</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="mf">1.0</span> <span class="o">/</span> <span class="n">inv_a2_pT</span><span class="p">)</span>
-    <span class="n">speed_sound</span> <span class="o">=</span> <span class="n">speed_sound_pT</span>
-    <span class="n">isentropic_bulk_modulus</span> <span class="o">=</span> <span class="n">rho</span> <span class="o">*</span> <span class="n">speed_sound</span><span class="o">**</span><span class="mi">2</span>
+    <span class="n">speed_of_sound_p</span> <span class="o">=</span> <span class="n">jnp</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="mf">1.0</span> <span class="o">/</span> <span class="n">inv_a2_p</span><span class="p">)</span>
+    <span class="n">speed_of_sound_pT</span> <span class="o">=</span> <span class="n">jnp</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="mf">1.0</span> <span class="o">/</span> <span class="n">inv_a2_pT</span><span class="p">)</span>
+    <span class="n">speed_of_sound</span> <span class="o">=</span> <span class="n">speed_of_sound_pT</span>
+    <span class="n">isentropic_bulk_modulus</span> <span class="o">=</span> <span class="n">rho</span> <span class="o">*</span> <span class="n">speed_of_sound</span><span class="o">**</span><span class="mi">2</span>
     <span class="n">isentropic_compressibility</span> <span class="o">=</span> <span class="mf">1.0</span> <span class="o">/</span> <span class="n">isentropic_bulk_modulus</span>
 
     <span class="c1"># --- transport properties (volume-weighted)</span>
@@ -407,9 +401,9 @@ document.write(`
         <span class="n">isentropic_compressibility</span><span class="o">=</span><span class="n">jnp</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">isentropic_compressibility</span><span class="p">),</span>
         <span class="n">isentropic_bulk_modulus</span><span class="o">=</span><span class="n">jnp</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">isentropic_bulk_modulus</span><span class="p">),</span>
         <span class="c1"># wave propagation</span>
-        <span class="n">speed_of_sound</span><span class="o">=</span><span class="n">jnp</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">speed_sound</span><span class="p">),</span>
-        <span class="n">speed_sound_p</span><span class="o">=</span><span class="n">jnp</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">speed_sound_p</span><span class="p">),</span>
-        <span class="n">speed_sound_pT</span><span class="o">=</span><span class="n">jnp</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">speed_sound_pT</span><span class="p">),</span>
+        <span class="n">speed_of_sound</span><span class="o">=</span><span class="n">jnp</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">speed_of_sound</span><span class="p">),</span>
+        <span class="n">speed_of_sound_p</span><span class="o">=</span><span class="n">jnp</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">speed_of_sound_p</span><span class="p">),</span>
+        <span class="n">speed_of_sound_pT</span><span class="o">=</span><span class="n">jnp</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">speed_of_sound_pT</span><span class="p">),</span>
         <span class="c1"># transport</span>
         <span class="n">conductivity</span><span class="o">=</span><span class="n">jnp</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">conductivity</span><span class="p">),</span>
         <span class="n">viscosity</span><span class="o">=</span><span class="n">jnp</span><span class="o">.</span><span class="n">asarray</span><span class="p">(</span><span class="n">viscosity</span><span class="p">),</span>
