--- a/genindex.html
+++ b/genindex.html
@@ -985,9 +985,9 @@ document.write(`
       </ul></li>
       <li><a href="source/api/jaxprop.perfect_gas.perfect_gas.html#jaxprop.perfect_gas.perfect_gas.speed_of_sound_from_T">speed_of_sound_from_T() (in module jaxprop.perfect_gas.perfect_gas)</a>
 </li>
-      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.speed_sound_p">speed_sound_p (jaxprop.helpers_props.MixtureState attribute)</a>
+      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.speed_of_sound_p">speed_of_sound_p (jaxprop.helpers_props.MixtureState attribute)</a>
 </li>
-      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.speed_sound_pT">speed_sound_pT (jaxprop.helpers_props.MixtureState attribute)</a>
+      <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.speed_of_sound_pT">speed_of_sound_pT (jaxprop.helpers_props.MixtureState attribute)</a>
 </li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.BaseState.stack">stack() (jaxprop.helpers_props.BaseState class method)</a>
 </li>
