--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; jaxprop v0.5.3 documentation</title>
+    <title>Index &#8212; jaxprop v0.5.4 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=868b69f2"></script>
+    <script src="_static/documentation_options.js?v=139eeb23"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">jaxprop v0.5.3 documentation</p>
+    <p class="title logo__title">jaxprop v0.5.4 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -348,8 +348,12 @@ document.write(`
         <li><a href="source/api/jaxprop.coolprop.jax_wrapper.html#jaxprop.coolprop.jax_wrapper.FluidJAX.backend">(jaxprop.coolprop.jax_wrapper.FluidJAX attribute)</a>
 </li>
       </ul></li>
+      <li><a href="source/api/jaxprop.two_component.mixture_calculations.html#jaxprop.two_component.mixture_calculations.FluidTwoComponent.backend_1">backend_1 (jaxprop.two_component.mixture_calculations.FluidTwoComponent attribute)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/jaxprop.two_component.mixture_calculations.html#jaxprop.two_component.mixture_calculations.FluidTwoComponent.backend_2">backend_2 (jaxprop.two_component.mixture_calculations.FluidTwoComponent attribute)</a>
+</li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.BaseState">BaseState (class in jaxprop.helpers_props)</a>
 </li>
       <li><a href="source/api/jaxprop.coolprop.core_calculations.html#jaxprop.coolprop.core_calculations.blend_properties">blend_properties() (in module jaxprop.coolprop.core_calculations)</a>
@@ -510,6 +514,10 @@ document.write(`
 </li>
       <li><a href="source/api/jaxprop.coolprop.jax_wrapper.html#jaxprop.coolprop.jax_wrapper.FluidJAX.fluid">fluid (jaxprop.coolprop.jax_wrapper.FluidJAX attribute)</a>
 </li>
+      <li><a href="source/api/jaxprop.two_component.mixture_calculations.html#jaxprop.two_component.mixture_calculations.FluidTwoComponent.fluid_1">fluid_1 (jaxprop.two_component.mixture_calculations.FluidTwoComponent attribute)</a>
+</li>
+      <li><a href="source/api/jaxprop.two_component.mixture_calculations.html#jaxprop.two_component.mixture_calculations.FluidTwoComponent.fluid_2">fluid_2 (jaxprop.two_component.mixture_calculations.FluidTwoComponent attribute)</a>
+</li>
       <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.fluid_name">fluid_name (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 
       <ul>
@@ -522,6 +530,10 @@ document.write(`
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/jaxprop.two_component.mixture_calculations.html#jaxprop.two_component.mixture_calculations.FluidTwoComponent.fluid_name_1">fluid_name_1 (jaxprop.two_component.mixture_calculations.FluidTwoComponent attribute)</a>
+</li>
+      <li><a href="source/api/jaxprop.two_component.mixture_calculations.html#jaxprop.two_component.mixture_calculations.FluidTwoComponent.fluid_name_2">fluid_name_2 (jaxprop.two_component.mixture_calculations.FluidTwoComponent attribute)</a>
+</li>
       <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic">FluidBicubic (class in jaxprop.bicubic.bicubic_interpolation)</a>
 </li>
       <li><a href="source/api/jaxprop.coolprop.jax_wrapper.html#jaxprop.coolprop.jax_wrapper.FluidJAX">FluidJAX (class in jaxprop.coolprop.jax_wrapper)</a>
@@ -529,6 +541,8 @@ document.write(`
       <li><a href="source/api/jaxprop.perfect_gas.perfect_gas.html#jaxprop.perfect_gas.perfect_gas.FluidPerfectGas">FluidPerfectGas (class in jaxprop.perfect_gas.perfect_gas)</a>
 </li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState">FluidState (class in jaxprop.helpers_props)</a>
+</li>
+      <li><a href="source/api/jaxprop.two_component.mixture_calculations.html#jaxprop.two_component.mixture_calculations.FluidTwoComponent">FluidTwoComponent (class in jaxprop.two_component.mixture_calculations)</a>
 </li>
       <li><a href="source/api/jaxprop.helpers_jax.html#jaxprop.helpers_jax.format_list_80">format_list_80() (in module jaxprop.helpers_jax)</a>
 </li>
@@ -556,6 +570,8 @@ document.write(`
         <li><a href="source/api/jaxprop.coolprop.jax_wrapper.html#jaxprop.coolprop.jax_wrapper.FluidJAX.get_state">(jaxprop.coolprop.jax_wrapper.FluidJAX method)</a>
 </li>
         <li><a href="source/api/jaxprop.perfect_gas.perfect_gas.html#jaxprop.perfect_gas.perfect_gas.FluidPerfectGas.get_state">(jaxprop.perfect_gas.perfect_gas.FluidPerfectGas method)</a>
+</li>
+        <li><a href="source/api/jaxprop.two_component.mixture_calculations.html#jaxprop.two_component.mixture_calculations.FluidTwoComponent.get_state">(jaxprop.two_component.mixture_calculations.FluidTwoComponent method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -602,6 +618,8 @@ document.write(`
         <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.MixtureState.identifier">(jaxprop.helpers_props.MixtureState attribute)</a>
 </li>
         <li><a href="source/api/jaxprop.perfect_gas.perfect_gas.html#jaxprop.perfect_gas.perfect_gas.FluidPerfectGas.identifier">(jaxprop.perfect_gas.perfect_gas.FluidPerfectGas attribute)</a>
+</li>
+        <li><a href="source/api/jaxprop.two_component.mixture_calculations.html#jaxprop.two_component.mixture_calculations.FluidTwoComponent.identifier">(jaxprop.two_component.mixture_calculations.FluidTwoComponent attribute)</a>
 </li>
       </ul></li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.internal_energy">internal_energy (jaxprop.helpers_props.FluidState attribute)</a>
